--- a/blog/package.json
+++ b/blog/package.json
@@ -10,9 +10,13 @@
         "format": "prettier --write ."
     },
     "dependencies": {
+        "@aws-sdk/client-dynamodb": "^3.886.0",
+        "@aws-sdk/lib-dynamodb": "^3.886.0",
+        "@aws-sdk/util-dynamodb": "^3.886.0",
         "next": "15.5.3",
         "react": "19.1.0",
-        "react-dom": "19.1.0"
+        "react-dom": "19.1.0",
+        "uuid": "^13.0.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
