--- a/blog/package.json
+++ b/blog/package.json
@@ -13,9 +13,11 @@
         "@aws-sdk/client-dynamodb": "^3.886.0",
         "@aws-sdk/lib-dynamodb": "^3.886.0",
         "@aws-sdk/util-dynamodb": "^3.886.0",
+        "clsx": "^2.1.1",
         "next": "15.5.3",
         "react": "19.1.0",
         "react-dom": "19.1.0",
+        "tailwind-merge": "^3.3.1",
         "uuid": "^13.0.0"
     },
     "devDependencies": {
@@ -25,6 +27,7 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "class-variance-authority": "^0.7.1",
         "eslint": "^9",
         "eslint-config-next": "15.5.3",
         "prettier": "3.6.2",
