--- a/blog/package.json
+++ b/blog/package.json
@@ -11,14 +11,14 @@
     },
     "dependencies": {
         "@aws-sdk/client-dynamodb": "^3.886.0",
+        "@aws-sdk/client-s3": "^3.887.0",
         "@aws-sdk/lib-dynamodb": "^3.886.0",
         "@aws-sdk/util-dynamodb": "^3.886.0",
         "clsx": "^2.1.1",
         "next": "15.5.3",
         "react": "19.1.0",
         "react-dom": "19.1.0",
-        "tailwind-merge": "^3.3.1",
-        "uuid": "^13.0.0"
+        "tailwind-merge": "^3.3.1"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
