--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@aws-sdk/util-dynamodb": "^3.886.0",
         "clsx": "^2.1.1",
         "next": "15.5.3",
+        "next-auth": "^4.24.11",
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "react-markdown": "^10.1.0",
