--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
         "@aws-sdk/client-s3": "^3.887.0",
         "@aws-sdk/lib-dynamodb": "^3.886.0",
         "@aws-sdk/util-dynamodb": "^3.886.0",
+        "@mdx-js/loader": "^3.1.1",
+        "@mdx-js/react": "^3.1.1",
+        "@next/mdx": "^15.5.4",
+        "@types/mdx": "^2.0.13",
         "clsx": "^2.1.1",
         "next": "15.5.3",
         "next-auth": "^4.24.11",
+        "next-mdx-remote-client": "^2.1.5",
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "react-markdown": "^10.1.0",
