--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "react-markdown": "^10.1.0",
         "rehype-sanitize": "^6.0.0",
         "remark-gfm": "^4.0.1",
-        "tailwind-merge": "^3.3.1"
+        "tailwind-merge": "^3.3.1",
+        "zod": "^4.1.11"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
