--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "@next/mdx": "^15.5.4",
         "@types/mdx": "^2.0.13",
         "clsx": "^2.1.1",
-        "next": "15.5.3",
+        "dotenv": "^17.2.2",
+        "next": "^15.6.0-canary.29",
         "next-auth": "^4.24.11",
         "next-mdx-remote-client": "^2.1.5",
         "react": "19.1.0",
