--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-    "name": "blog",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev --turbopack",
-        "build": "next build --turbopack",
-        "start": "next start",
-        "lint": "eslint",
-        "format": "prettier --write ."
-    },
-    "dependencies": {
-        "@aws-sdk/client-dynamodb": "^3.886.0",
-        "@aws-sdk/client-s3": "^3.887.0",
-        "@aws-sdk/lib-dynamodb": "^3.886.0",
-        "@aws-sdk/util-dynamodb": "^3.886.0",
-        "@mdx-js/loader": "^3.1.1",
-        "@mdx-js/react": "^3.1.1",
-        "@next/mdx": "^15.5.4",
-        "@types/mdx": "^2.0.13",
-        "clsx": "^2.1.1",
-        "dotenv": "^17.2.2",
-        "next": "^15.6.0-canary.29",
-        "next-auth": "^4.24.11",
-        "next-mdx-remote-client": "^2.1.5",
-        "react": "19.1.0",
-        "react-dom": "19.1.0",
-        "react-markdown": "^10.1.0",
-        "rehype-sanitize": "^6.0.0",
-        "remark-gfm": "^4.0.1",
-        "tailwind-merge": "^3.3.1",
-        "zod": "^4.1.11"
-    },
-    "devDependencies": {
-        "@eslint/eslintrc": "^3",
-        "@tailwindcss/postcss": "^4",
-        "@tailwindcss/typography": "^0.5.16",
-        "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "class-variance-authority": "^0.7.1",
-        "eslint": "^9",
-        "eslint-config-next": "15.5.3",
-        "prettier": "3.6.2",
-        "tailwindcss": "^4",
-        "typescript": "^5"
-    }
+  "name": "blog",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
+    "start": "next start",
+    "lint": "eslint",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.886.0",
+    "@aws-sdk/client-s3": "^3.887.0",
+    "@aws-sdk/lib-dynamodb": "^3.886.0",
+    "@aws-sdk/util-dynamodb": "^3.886.0",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^15.5.4",
+    "@types/mdx": "^2.0.13",
+    "clsx": "^2.1.1",
+    "dotenv": "^17.2.2",
+    "next": "^15.5.4",
+    "next-auth": "^4.24.11",
+    "next-mdx-remote-client": "^2.1.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.11"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.55.1",
+    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "class-variance-authority": "^0.7.1",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.3",
+    "prettier": "3.6.2",
+    "tailwindcss": "^4",
+    "typescript": "^5"
+  }
 }
