--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,28 +12,42 @@ jobs:
       name: test
     steps:
       - uses: actions/checkout@v4
+            # Node + npm cache (node_modules)
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
+          cache: 'npm' # caches node_modules based on package-lock.json
+
       - name: Install dependencies
         run: npm ci
+
+      # Cache Playwright browsers (~/.cache/ms-playwright)
+      - name: Cache Playwright browsers
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-playwright-
+
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
+    
       - name: Run Playwright tests
         env: 
-          AWS_REGION=${{ vars.AWS_REGION }}
-          POSTS_TABLE=${{ vars.POSTS_TABLE }}
-          DYNAMO_DB_AWS_ACCESS_KEY_ID=${{ secrets.DYNAMO_DB_AWS_ACCESS_KEY_ID }}
-          DYNAMO_DB_AWS_SECRET_ACCESS_KEY=${{ secrets.DYNAMO_DB_AWS_SECRET_ACCESS_KEY }}
-          NEXT_PUBLIC_S3_CDN_HOST_NAME=${{ vars.NEXT_PUBLIC_S3_CDN_HOST_NAME }}
-          S3_BUCKET_NAME=${{ vars.S3_BUCKET_NAME }}
-          S3_AWS_ACCESS_KEY_ID=${{ secrets.S3_AWS_ACCESS_KEY_ID }}
-          S3_AWS_SECRET_ACCESS_KEY=${{ secrets.S3_AWS_SECRET_ACCESS_KEY }}
-          GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
-          GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
-          ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}
-          NEXT_PUBLIC_BASE_URL=${{ vars.NEXT_PUBLIC_BASE_URL }}
-          NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}
+          AWS_REGION: ${{ vars.AWS_REGION }}
+          POSTS_TABLE: ${{ vars.POSTS_TABLE }}
+          DYNAMO_DB_AWS_ACCESS_KEY_ID: ${{ secrets.DYNAMO_DB_AWS_ACCESS_KEY_ID }}
+          DYNAMO_DB_AWS_SECRET_ACCESS_KEY: ${{ secrets.DYNAMO_DB_AWS_SECRET_ACCESS_KEY }}
+          NEXT_PUBLIC_S3_CDN_HOST_NAME: ${{ vars.NEXT_PUBLIC_S3_CDN_HOST_NAME }}
+          S3_BUCKET_NAME: ${{ vars.S3_BUCKET_NAME }}
+          S3_AWS_ACCESS_KEY_ID: ${{ secrets.S3_AWS_ACCESS_KEY_ID }}
+          S3_AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_AWS_SECRET_ACCESS_KEY }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          ADMIN_EMAIL: ${{ secrets.ADMIN_EMAIL }}
+          NEXT_PUBLIC_BASE_URL: ${{ vars.NEXT_PUBLIC_BASE_URL }}
+          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
         run: npx playwright test
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
