--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,11 +8,17 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.50.0-noble
+      # Optionally mount cache dirs for npm + playwright
+      options: --ipc=host
+
     environment:
       name: test
+
     steps:
       - uses: actions/checkout@v4
-            # Node + npm cache (node_modules)
+
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
@@ -20,18 +26,6 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
-      # Cache Playwright browsers (~/.cache/ms-playwright)
-      - name: Cache Playwright browsers
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/ms-playwright
-          key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-playwright-
-
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
     
       - name: Run Playwright tests
         env: 
