--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,15 +1,6 @@
 {
-    "trailingComma": "es5",
-    "tabWidth": 4,
-    "semi": true,
-    "singleQuote": true,
-    "overrides": [
-        {
-            "files": ["*.yml", "*.yaml"],
-            "options": {
-                "singleQuote": false,
-                "tabWidth": 2
-            }
-        }
-    ]
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": true
 }
