--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "build:test": "cross-env NODE_ENV=test next build",
+    "start:test": "cross-env NODE_ENV=test next start"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.886.0",
@@ -19,7 +21,6 @@
     "@next/mdx": "^15.5.4",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
-    "dotenv": "^17.2.2",
     "next": "^15.5.4",
     "next-auth": "^4.24.11",
     "next-mdx-remote-client": "^2.1.5",
@@ -40,6 +41,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "class-variance-authority": "^0.7.1",
+    "cross-env": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "prettier": "3.6.2",
