--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@next/mdx": "^15.5.4",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.2",
     "next": "^15.5.4",
     "next-auth": "^4.24.11",
     "next-mdx-remote-client": "^2.1.5",
