Default to .env file

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "format": "prettier --write .",
-    "build:test": "cross-env NODE_ENV=test next build",
-    "start:test": "cross-env NODE_ENV=test next start"
+    "build:test": "cross-env NODE_ENV=development next build",
+    "start:test": "cross-env NODE_ENV=development next start"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.886.0",
