Looks to be working now

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -48,7 +48,10 @@ jobs:
         run: npm run build
     
       - name: Run Playwright tests
+        env:
+        HOME: /root 
         run: npx playwright test
+        
         
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
