--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -58,9 +58,9 @@ jobs:
         
         
       - uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
+        if: ${{ always() }}
         with:
-          name: playwright-report
+          name: playwright-results
           path: |
             playwright-report/
             test-results/
