--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Run Playwright tests
         env:
           HOME: /root 
-        run: npx playwright test
+        run: npx playwright test --project=e2e-all-browsers
         
         
       - uses: actions/upload-artifact@v4
@@ -63,5 +63,4 @@ jobs:
           name: playwright-results
           path: |
             playwright-report/
-            test-results/
           retention-days: 5
