--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,6 +7,8 @@
     {
       "files": "*.mdx",
       "options": {
+        "parser": "mdx",
+        "proseWrap": "preserve",
         "trimTrailingWhitespace": false
       }
     }
