--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
+    "http-status-codes": "^2.3.0",
     "next": "^15.5.4",
     "next-auth": "^4.24.11",
     "next-mdx-remote-client": "^2.1.5",
