--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,9 @@ jobs:
           echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> .env
           echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env
           echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env
+          echo "DEPLOY_AWS_ACCESS_KEY_ID=${{ secrets.DEPLOY_AWS_ACCESS_KEY_ID }}" >> .env
+          echo "DEPLOY_AWS_SECRET_ACCESS_KEY=${{ secrets.DEPLOY_AWS_SECRET_ACCESS_KEY }}" >> .env
+
 
       - name: Build app
         run: npm run build
