--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -62,3 +62,6 @@ jobs:
           path: |
             playwright-report/
           retention-days: 5
+
+      - name: Cleanup
+        run: rm .env
