--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.886.0",
     "@aws-sdk/client-s3": "^3.887.0",
+    "@aws-sdk/client-secrets-manager": "^3.910.0",
     "@aws-sdk/lib-dynamodb": "^3.886.0",
     "@aws-sdk/util-dynamodb": "^3.886.0",
     "@mdx-js/loader": "^3.1.1",
