--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,31 @@
-name: Playwright Tests
-on:
-  pull_request:
-    branches: [main, master]
-jobs:
-  test:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-    container:
-      image: mcr.microsoft.com/playwright:v1.55.1-noble
-      options: --ipc=host
+name: Build App
 
-    environment:
-      name: test
+on:
+  workflow_call:
+    secrets:
+      ACCESS_KEY_ID_AWS:
+        required: true
+      SECRET_ACCESS_KEY_AWS:
+        required: true
+      NEXTAUTH_SECRET:
+        required: true
+      GOOGLE_CLIENT_ID:
+        required: true
+      GOOGLE_CLIENT_SECRET:
+        required: true
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-node@v4
         with:
-          node-version: lts/*
-          cache: 'npm' # caches node_modules based on package-lock.json
+          node-version: 22
+          cache: npm
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Lint
-        run: npm run lint
 
       - name: Create environment file
         run: |
@@ -36,7 +36,7 @@ jobs:
           echo "REGION_AWS=${{ vars.REGION_AWS }}" >> .env
           echo "BLOG_POSTS_TABLE_NAME=${{ vars.BLOG_POSTS_TABLE_NAME }}" >> .env
           echo "S3_BUCKET_NAME=${{ vars.S3_BUCKET_NAME }}" >> .env
-          echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> .env
+          echo "ADMIN_EMAIL=${{ vars.ADMIN_EMAIL }}" >> .env
           echo "NEXTAUTH_URL=${{ vars.NEXTAUTH_URL }}" >> .env
           echo "NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> .env
           echo "ACCESS_KEY_ID_AWS=${{ secrets.ACCESS_KEY_ID_AWS }}" >> .env
@@ -44,21 +44,14 @@ jobs:
           echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env
           echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Build app
         run: npm run build
 
-      - name: Run Playwright tests
-        env:
-          HOME: /root
-        run: npx playwright test --project=e2e-all-browsers
-
-      - uses: actions/upload-artifact@v4
-        if: ${{ always() }}
+      - name: Upload build
+        uses: actions/upload-artifact@v4
         with:
-          name: playwright-results
-          path: |
-            playwright-report/
-          retention-days: 5
-
-      - name: Cleanup
-        run: rm .env
+          name: app-build
+          path: .next/
