--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,9 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    uses: ./.github/workflows/build.yml
+    environment: test
+    secrets: inherit
 
     steps:
       - uses: actions/checkout@v4
