--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,8 +50,13 @@ jobs:
       - name: Build app
         run: npm run build
 
+      - name: Print file tree
+        run: |
+          echo "Current directory: $(pwd)"
+          find . -maxdepth 3 -type d | sed 's/[^-][^\/]*\//--/g;s/^/   /;s/-/|/'
+
       - name: Upload build
         uses: actions/upload-artifact@v4
         with:
           name: app-build
-          path: ./.next/
+          path: .next
