--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     environment: test
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}
+
     steps:
       - uses: actions/checkout@v4
 
@@ -54,4 +58,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-build
-          path: ${{ github.workspace }}/.next
+          path: .next/
