--- a/.github/workflows/playwright-test.yml
+++ b/.github/workflows/playwright-test.yml
@@ -15,6 +15,9 @@ jobs:
     container:
       image: mcr.microsoft.com/playwright:v1.55.1-noble
       options: --ipc=host
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}
 
     env:
       NEXT_PUBLIC_BASE_URL: ${{ vars.NEXT_PUBLIC_BASE_URL }}
