--- a/.github/workflows/playwright-test.yml
+++ b/.github/workflows/playwright-test.yml
@@ -8,10 +8,22 @@ on:
         required: false
         default: e2e-all-browsers
         type: string
+    secrets:
+      ACCESS_KEY_ID_AWS:
+        required: false
+      SECRET_ACCESS_KEY_AWS:
+        required: false
+      NEXTAUTH_SECRET:
+        required: false
+      GOOGLE_CLIENT_ID:
+        required: false
+      GOOGLE_CLIENT_SECRET:
+        required: false
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    environment: ${{ github.environment }}
     container:
       image: mcr.microsoft.com/playwright:v1.55.1-noble
       options: --ipc=host
@@ -41,9 +53,36 @@ jobs:
         with:
           name: next-build
 
+      - name: Check env variables
+        if: ${{ github.environment == 'test' }} && ${{ secrets.NEXTAUTH_URL == ''}}
+        run: |
+          echo "Error: NextJs variables required for running tests against local build"
+          exit 1
+
+      - name: Create environment file 
+        if: ${{ github.environment == 'test' }}
+        run: |
+          echo "Creating .env file for test environment"
+          touch .env
+          echo "NEXT_PUBLIC_POINTED_AT_TEST=${{ vars.NEXT_PUBLIC_POINTED_AT_TEST }}" >> .env
+          echo "NEXT_PUBLIC_BASE_URL=${{ vars.NEXT_PUBLIC_BASE_URL }}" >> .env
+          echo "NEXT_PUBLIC_S3_CDN_HOST_NAME=${{ vars.NEXT_PUBLIC_S3_CDN_HOST_NAME }}" >> .env
+          echo "REGION_AWS=${{ vars.REGION_AWS }}" >> .env
+          echo "BLOG_POSTS_TABLE_NAME=${{ vars.BLOG_POSTS_TABLE_NAME }}" >> .env
+          echo "S3_BUCKET_NAME=${{ vars.S3_BUCKET_NAME }}" >> .env
+          echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> .env
+          echo "NEXTAUTH_URL=${{ vars.NEXTAUTH_URL }}" >> .env
+          echo "NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> .env
+          echo "ACCESS_KEY_ID_AWS=${{ secrets.ACCESS_KEY_ID_AWS }}" >> .env
+          echo "SECRET_ACCESS_KEY_AWS=${{ secrets.SECRET_ACCESS_KEY_AWS }}" >> .env
+          echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env
+          echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env
+
       # --- Install Playwright and run tests ---
       - name: Create environment file
+        if: ${{ github.environment == 'production' }}
         run: |
+          echo "Creating .env file for production environment"
           touch .env
           echo "NEXT_PUBLIC_BASE_URL=${{ env.NEXT_PUBLIC_BASE_URL }}" >> .env
 
