Need to pass vars to build?

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,39 @@ name: Build App
 
 on:
   workflow_call:
+    inputs:
+      NEXT_PUBLIC_BASE_URL:
+        description: "The base URL for the Next.js application"
+        required: true
+        type: string
+      NEXT_PUBLIC_POINTED_AT_TEST:
+        description: "Indicates if the app is pointed at the test environment"
+        required: false
+        type: boolean
+      NEXT_PUBLIC_S3_CDN_HOST_NAME:
+        description: "The S3 CDN host name"
+        required: true
+        type: string
+      REGION_AWS:
+        description: "The AWS region"
+        required: true
+        type: string
+      BLOG_POSTS_TABLE_NAME:
+        description: "The DynamoDB table name for blog posts"
+        required: true
+        type: string
+      S3_BUCKET_NAME:
+        description: "The S3 bucket name"
+        required: true
+        type: string
+      ADMIN_EMAIL:
+        description: "The admin email address"
+        required: true
+        type: string
+      NEXTAUTH_URL: 
+        description: "The URL for NextAuth"
+        required: true
+        type: string
     secrets:
       ACCESS_KEY_ID_AWS:
         required: true
@@ -31,14 +64,14 @@ jobs:
       - name: Create environment file
         run: |
           touch .env
-          echo "NEXT_PUBLIC_POINTED_AT_TEST=${{ vars.NEXT_PUBLIC_POINTED_AT_TEST }}" >> .env
-          echo "NEXT_PUBLIC_BASE_URL=${{ vars.NEXT_PUBLIC_BASE_URL }}" >> .env
-          echo "NEXT_PUBLIC_S3_CDN_HOST_NAME=${{ vars.NEXT_PUBLIC_S3_CDN_HOST_NAME }}" >> .env
-          echo "REGION_AWS=${{ vars.REGION_AWS }}" >> .env
-          echo "BLOG_POSTS_TABLE_NAME=${{ vars.BLOG_POSTS_TABLE_NAME }}" >> .env
-          echo "S3_BUCKET_NAME=${{ vars.S3_BUCKET_NAME }}" >> .env
-          echo "ADMIN_EMAIL=${{ vars.ADMIN_EMAIL }}" >> .env
-          echo "NEXTAUTH_URL=${{ vars.NEXTAUTH_URL }}" >> .env
+          echo "NEXT_PUBLIC_POINTED_AT_TEST=${{ env.NEXT_PUBLIC_POINTED_AT_TEST }}" >> .env
+          echo "NEXT_PUBLIC_BASE_URL=${{ env.NEXT_PUBLIC_BASE_URL }}" >> .env
+          echo "NEXT_PUBLIC_S3_CDN_HOST_NAME=${{ env.NEXT_PUBLIC_S3_CDN_HOST_NAME }}" >> .env
+          echo "REGION_AWS=${{ env.REGION_AWS }}" >> .env
+          echo "BLOG_POSTS_TABLE_NAME=${{ env.BLOG_POSTS_TABLE_NAME }}" >> .env
+          echo "S3_BUCKET_NAME=${{ env.S3_BUCKET_NAME }}" >> .env
+          echo "ADMIN_EMAIL=${{ env.ADMIN_EMAIL }}" >> .env
+          echo "NEXTAUTH_URL=${{ env.NEXTAUTH_URL }}" >> .env
           echo "NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> .env
           echo "ACCESS_KEY_ID_AWS=${{ secrets.ACCESS_KEY_ID_AWS }}" >> .env
           echo "SECRET_ACCESS_KEY_AWS=${{ secrets.SECRET_ACCESS_KEY_AWS }}" >> .env
