--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,11 @@ name: CI Pipeline
 on:
   push:
     branches: [ master ]
-  environment: test
 
 jobs:
+  environment:
+    name: test
+
   build:
     uses: ./.github/workflows/build.yml
     secrets:
