Add variable to repo and prod env

--- a/.github/workflows/playwright-test.yml
+++ b/.github/workflows/playwright-test.yml
@@ -111,7 +111,7 @@ jobs:
 
       # --- Install Playwright and run tests ---
       - name: Create environment file
-        if: ${{ github.environment == 'production' }}
+        if: ${{ github.environment == 'prod' }}
         run: |
           echo "Creating .env file for production environment"
           touch .env
